objects/Retainage_Ledger_Entry__c/Retainage_Ledger_Entry__c.object-meta.xml
<CustomObject>
    <label>Retainage Ledger Entry</label>
    <nameField>
        <displayFormat>RLE-{00000000}</displayFormat>
        <label>Entry No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retainage Ledger Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>