objects/Retainage_Ledger_Entry__c/fields/Closed_By_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_Invoice_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed By Invoice No.</label>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Retainage Ledger Entries</relationshipLabel>
    <relationshipName>Retainage_Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>