objects/Retainage_Ledger_Entry__c/fields/Closed_By_Invoice_Reversed_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_Invoice_Reversed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed By Invoice Reversed By</label>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Retainage Ledger Entries (Closed By Invoice Reversed By)</relationshipLabel>
    <relationshipName>Retainage_Ledger_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>