objects/Retainage_Ledger_Entry__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retainage Ledger Entries</relationshipLabel>
    <relationshipName>Retainage_Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>