objects/Retainage_Ledger_Entry__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice</label>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Retainage Ledger Entries (Sales Invoice)</relationshipLabel>
    <relationshipName>Retainage_Ledger_Entries2</relationshipName>
    <type>Lookup</type>
</CustomField>