objects/Retainage_Ledger_Entry__c/fields/Sales_Invoice_Reversed_By__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Reversed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice Reversed By</label>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Retainage Ledger Entries (Sales Invoice Reversed By)</relationshipLabel>
    <relationshipName>Retainage_Ledger_Entries3</relationshipName>
    <type>Lookup</type>
</CustomField>