objects/Retainage_Ledger_Entry__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Retainage Ledger Entries</relationshipLabel>
    <relationshipName>Retainage_Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>