objects/Retainage_Ledger_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>Sales_Invoice__c</columns>
    <columns>Sales_Invoice_Reversed_By__c</columns>
    <columns>Amount__c</columns>
    <columns>Invoiced__c</columns>
    <columns>Customer__c</columns>
    <columns>Closed_By_Invoice_No__c</columns>
    <columns>Closed_By_Invoice_Reversed_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer__c</field>
        <operation>equals</operation>
        <value>NJ DEPT OF MILITARY &amp; VETERAN</value>
    </filters>
    <label>All</label>
</ListView>